<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="16dp">

    <TextView
        android:id="@+id/titleForYou"
        android:layout_width="106dp"
        android:layout_height="41dp"
        android:layout_marginTop="4dp"
        android:text="@string/For_you"
        android:gravity="center"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/youMightLike"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:inputType="text"
        android:text="@string/you_might_like"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleForYou"
        android:autofillHints="Put recipes here"
        tools:ignore="LabelFor" />

    <ImageButton
        android:id="@+id/imageButtonSearch"
        android:layout_width="62dp"
        android:layout_height="36dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="-36dp"
        app:layout_constraintStart_toEndOf="@id/imageButtonForYou"
        app:layout_constraintTop_toBottomOf="@id/imageButtonForYou"
        android:src="@drawable/search"
        android:contentDescription="@string/search_icon_nav_bar" />

    <TextView
        android:id="@+id/textSearch"
        android:layout_width="62dp"
        android:layout_height="23dp"
        android:layout_marginStart="-62dp"
        android:layout_marginTop="632dp"
        android:text="@string/search"
        android:gravity="center"
        app:layout_constraintStart_toEndOf="@+id/imageButtonSearch"
        app:layout_constraintTop_toBottomOf="@+id/titleForYou" />

    <ImageButton
        android:id="@+id/imageButtonSaved"
        android:layout_width="62dp"
        android:layout_height="36dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="-36dp"
        app:layout_constraintStart_toEndOf="@id/imageButtonSearch"
        app:layout_constraintTop_toBottomOf="@id/imageButtonSearch"
        android:src="@drawable/saved"
        android:contentDescription="@string/saved_button_icon_nav_bar" />

    <TextView
        android:id="@+id/textSaved"
        android:layout_width="62dp"
        android:layout_height="23dp"
        android:layout_marginStart="-62dp"
        android:layout_marginTop="632dp"
        android:text="@string/saved"
        android:gravity="center"
        app:layout_constraintStart_toEndOf="@+id/imageButtonSaved"
        app:layout_constraintTop_toBottomOf="@+id/titleForYou" />

    <ImageButton
        android:id="@+id/imageButtonSettings"
        android:layout_width="62dp"
        android:layout_height="36dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="-36dp"
        app:layout_constraintStart_toEndOf="@id/imageButtonSaved"
        app:layout_constraintTop_toBottomOf="@id/imageButtonSaved"
        android:contentDescription="@string/settings_button_icon_nav_bar"
        android:src="@android:drawable/ic_menu_manage" />

    <TextView
        android:id="@+id/textSettings"
        android:layout_width="62dp"
        android:layout_height="23dp"
        android:layout_marginStart="-62dp"
        android:layout_marginTop="632dp"
        android:text="@string/settings"
        android:gravity="center"
        app:layout_constraintStart_toEndOf="@+id/imageButtonSettings"
        app:layout_constraintTop_toBottomOf="@+id/titleForYou" />

    <ImageButton
        android:id="@+id/imageButtonForYou"
        android:layout_width="62dp"
        android:layout_height="36dp"
        android:layout_marginStart="-225dp"
        android:layout_marginTop="596dp"
        app:layout_constraintStart_toEndOf="@id/titleForYou"
        app:layout_constraintTop_toBottomOf="@+id/titleForYou"
        android:contentDescription="@string/for_you_button_icon_nav_bar"
        android:src="@drawable/foryou"/>


    <TextView
        android:id="@+id/textForYou"
        android:layout_width="62dp"
        android:layout_height="23dp"
        android:layout_marginStart="-62dp"
        android:layout_marginTop="632dp"
        android:text="@string/for_you"
        android:gravity="center"
        app:layout_constraintStart_toEndOf="@+id/imageButtonForYou"
        app:layout_constraintTop_toBottomOf="@+id/titleForYou" />

    <ImageButton
        android:id="@+id/imageButtonHamburgerMenu"
        android:layout_width="46dp"
        android:layout_height="37dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:src="@android:drawable/ic_menu_sort_by_size"
        android:contentDescription="@string/hamburger_menu_button_icon_nav_bar" />

    <ImageButton
        android:id="@+id/imageButton9"
        android:layout_width="46dp"
        android:layout_height="37dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:src="@android:drawable/ic_menu_view"
        android:contentDescription="@string/personal_page_button_icon_nav_bar" />

</androidx.constraintlayout.widget.ConstraintLayout>