<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <TextView
        android:id="@+id/titleForYou"
        android:layout_width="125dp"
        android:layout_height="41dp"
        android:layout_marginTop="4dp"
        android:gravity="center"
        android:text="@string/create_recipe"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/imageButtonSearch"
        android:layout_width="62dp"
        android:layout_height="36dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="-36dp"
        android:contentDescription="@string/search_icon_nav_bar"
        android:src="?android:attr/actionModeWebSearchDrawable"
        app:layout_constraintStart_toEndOf="@id/imageButtonForYou"
        app:layout_constraintTop_toBottomOf="@id/imageButtonForYou" />

    <TextView
        android:id="@+id/textSearch"
        android:layout_width="62dp"
        android:layout_height="23dp"
        android:layout_marginStart="-62dp"
        android:layout_marginTop="632dp"
        android:gravity="center"
        android:text="@string/search"
        app:layout_constraintStart_toEndOf="@+id/imageButtonSearch"
        app:layout_constraintTop_toBottomOf="@+id/titleForYou" />

    <ImageButton
        android:id="@+id/imageButtonSaved"
        android:layout_width="62dp"
        android:layout_height="36dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="-36dp"
        android:contentDescription="@string/saved_button_icon_nav_bar"
        android:src="@drawable/saved"
        app:layout_constraintStart_toEndOf="@id/imageButtonSearch"
        app:layout_constraintTop_toBottomOf="@id/imageButtonSearch" />

    <TextView
        android:id="@+id/textSaved"
        android:layout_width="62dp"
        android:layout_height="23dp"
        android:layout_marginStart="-62dp"
        android:layout_marginTop="632dp"
        android:gravity="center"
        android:text="@string/saved"
        app:layout_constraintStart_toEndOf="@+id/imageButtonSaved"
        app:layout_constraintTop_toBottomOf="@+id/titleForYou" />

    <ImageButton
        android:id="@+id/imageButtonSettings"
        android:layout_width="62dp"
        android:layout_height="36dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="-36dp"
        android:contentDescription="@string/settings_button_icon_nav_bar"
        android:src="@drawable/settings"
        app:layout_constraintStart_toEndOf="@id/imageButtonSaved"
        app:layout_constraintTop_toBottomOf="@id/imageButtonSaved" />

    <TextView
        android:id="@+id/textSettings"
        android:layout_width="62dp"
        android:layout_height="23dp"
        android:layout_marginStart="-62dp"
        android:layout_marginTop="632dp"
        android:gravity="center"
        android:text="@string/settings"
        app:layout_constraintStart_toEndOf="@+id/imageButtonSettings"
        app:layout_constraintTop_toBottomOf="@+id/titleForYou" />

    <ImageButton
        android:id="@+id/imageButtonForYou"
        android:layout_width="62dp"
        android:layout_height="36dp"
        android:layout_marginStart="-232dp"
        android:layout_marginTop="596dp"
        android:contentDescription="@string/for_you_button_icon_nav_bar"
        android:src="@drawable/foryou"
        app:layout_constraintStart_toEndOf="@id/titleForYou"
        app:layout_constraintTop_toBottomOf="@+id/titleForYou" />

    <TextView
        android:id="@+id/textForYou"
        android:layout_width="62dp"
        android:layout_height="23dp"
        android:layout_marginStart="-62dp"
        android:layout_marginTop="632dp"
        android:gravity="center"
        android:text="@string/for_you"
        app:layout_constraintStart_toEndOf="@+id/imageButtonForYou"
        app:layout_constraintTop_toBottomOf="@+id/titleForYou" />

    <ImageButton
        android:id="@+id/imageButtonHamburgerMenu"
        android:layout_width="46dp"
        android:layout_height="37dp"
        android:contentDescription="@string/hamburger_menu_button_icon_nav_bar"
        android:src="@drawable/menu"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/imageButton9"
        android:layout_width="46dp"
        android:layout_height="37dp"
        android:contentDescription="@string/personal_page_button_icon_nav_bar"
        android:src="@drawable/usericon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextRecipeTitle"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:autofillHints="Title of recipe here"
        android:hint="@string/enter_text_here"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textRecipeTitle"
        android:layout_width="80dp"
        android:layout_height="36dp"
        android:layout_marginStart="-350dp"
        android:layout_marginTop="-56dp"
        android:text="@string/title"
        app:layout_constraintStart_toEndOf="@id/editTextRecipeTitle"
        app:layout_constraintTop_toBottomOf="@+id/editTextRecipeTitle" />

    <EditText
        android:id="@+id/editTextRecipeCookTime"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="-350dp"
        android:layout_marginTop="40dp"
        android:autofillHints="Cook time here"
        android:hint="@string/enter_text_here"
        android:inputType="text"
        app:layout_constraintStart_toEndOf="@id/editTextRecipeTitle"
        app:layout_constraintTop_toBottomOf="@id/editTextRecipeTitle" />

    <TextView
        android:id="@+id/textRecipeCookTime"
        android:layout_width="80dp"
        android:layout_height="36dp"
        android:layout_marginStart="-350dp"
        android:layout_marginTop="-56dp"
        android:text="@string/cook_time"
        app:layout_constraintStart_toEndOf="@id/editTextRecipeCookTime"
        app:layout_constraintTop_toBottomOf="@id/editTextRecipeCookTime" />

    <EditText
        android:id="@+id/editTextRecipeIngredients"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="-350dp"
        android:layout_marginTop="40dp"
        android:autofillHints="Ingredients here"
        android:hint="@string/enter_text_here"
        android:inputType="text"
        app:layout_constraintStart_toEndOf="@id/editTextRecipeCookTime"
        app:layout_constraintTop_toBottomOf="@id/editTextRecipeCookTime" />

    <TextView
        android:id="@+id/textRecipeIngredients"
        android:layout_width="80dp"
        android:layout_height="36dp"
        android:layout_marginStart="-350dp"
        android:layout_marginTop="-56dp"
        android:text="@string/ingredients"
        app:layout_constraintStart_toEndOf="@id/editTextRecipeIngredients"
        app:layout_constraintTop_toBottomOf="@id/editTextRecipeIngredients" />

    <Spinner
        android:id="@+id/spinnerRecipeDifficulty"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="-350dp"
        android:layout_marginTop="50dp"
        android:spinnerMode="dropdown"
        app:layout_constraintStart_toEndOf="@id/editTextRecipeIngredients"
        app:layout_constraintTop_toBottomOf="@id/editTextRecipeIngredients" />


    <TextView
        android:id="@+id/textRecipeDifficulty"
        android:layout_width="80dp"
        android:layout_height="36dp"
        android:layout_marginStart="-350dp"
        android:layout_marginTop="-56dp"
        android:text="@string/difficulty"
        app:layout_constraintStart_toEndOf="@id/spinnerRecipeDifficulty"
        app:layout_constraintTop_toBottomOf="@id/spinnerRecipeDifficulty" />

    <Spinner
        android:id="@+id/spinnerSpiceLevel"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="-350dp"
        android:layout_marginTop="50dp"
        android:spinnerMode="dropdown"
        app:layout_constraintStart_toEndOf="@id/spinnerRecipeDifficulty"
        app:layout_constraintTop_toBottomOf="@id/spinnerRecipeDifficulty" />

    <TextView
        android:id="@+id/textRecipeSpiceLevel"
        android:layout_width="80dp"
        android:layout_height="36dp"
        android:layout_marginStart="-350dp"
        android:layout_marginTop="-56dp"
        android:text="@string/spice_level"
        app:layout_constraintStart_toEndOf="@id/spinnerSpiceLevel"
        app:layout_constraintTop_toBottomOf="@id/spinnerSpiceLevel" />

    <Button
        android:id="@+id/createRecipeButton"
        android:layout_width="162dp"
        android:layout_height="44dp"
        android:layout_marginStart="-144dp"
        android:layout_marginTop="532dp"
        android:gravity="center"
        android:text="@string/create"
        app:layout_constraintStart_toEndOf="@id/titleForYou"
        app:layout_constraintTop_toBottomOf="@id/titleForYou" />

    <Spinner
        android:id="@+id/spinnerIngredientQuantity"
        android:layout_width="110dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="-110dp"
        android:layout_marginTop="-40dp"
        android:spinnerMode="dropdown"
        app:layout_constraintStart_toEndOf="@id/editTextRecipeIngredients"
        app:layout_constraintTop_toBottomOf="@id/editTextRecipeIngredients" />

    <EditText
        android:id="@+id/editTextIngredientQuantity"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="-220dp"
        android:layout_marginTop="-46dp"
        android:hint="Amount"
        android:inputType="number"
        app:layout_constraintStart_toEndOf="@id/editTextRecipeIngredients"
        app:layout_constraintTop_toBottomOf="@id/editTextRecipeIngredients" />

    <Button
        android:id="@+id/addIngredientButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="276dp"
        android:text="Add ingredient"
        app:layout_constraintTop_toBottomOf="@+id/titleForYou"
        tools:layout_editor_absoluteX="120dp" />

    <LinearLayout
        android:layout_width="352dp"
        android:layout_height="51dp"
        android:layout_marginTop="436dp"
        android:orientation="horizontal"
        android:textAlignment="center"
        app:layout_constraintTop_toBottomOf="@+id/titleForYou"
        tools:layout_editor_absoluteX="15dp">

        <CheckBox
            android:id="@+id/glutenCheckbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Gluten" />

        <CheckBox
            android:id="@+id/veganCheckbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Vegan" />

        <CheckBox
            android:id="@+id/soyCheckbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Soy" />

        <CheckBox
            android:id="@+id/nutsCheckbox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Nuts" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>